# miniature_tracker

./: .gitignore  ACCOUNT_DISAPPEARING_FIX.md  README.md  RENDER_POSTGRESQL_SETUP.md  coda_codingteacher.md  delete_user_script.py  features.md  nixpacks.toml  render.yaml  test_units.py
backend/: .env  check_current_users.py  check_file_users.py  check_miniatures.py  check_postgres_users.py  check_recent_registrations.py  check_users.py  debug_database_connection.py  debug_db_connection.py  debug_geocoding.py  find_missing_user.py  monitor_deployment.py  monitor_users.py  pyproject.toml  test_db_geocoding.py  test_env.py  test_export.py  test_geocoding.py  test_irish_geocoding.py
backend/app/: auth_dependencies.py  auth_models.py  auth_routes.py  auth_utils.py  crud.py  data_backup.py  database.py  email_service.py  geocoding.py  main.py  migration.py  models.py  oauth_config.py  oauth_routes.py  persistent_storage.py  player_routes.py  user_crud.py
backend/app/tests/: test_crud.py  test_main.py  test_models.py
backend/backup/data_backup_20250524_151523/: backup_info.json
backend/backup/data_backup_20250524_153046/: backup_info.json  reset_tokens.json
backend/backup/data_backup_20250524_153114/: backup_info.json
backend/data/: games.json  miniatures.json  preferences.json  users.json
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css  themes.css  types.ts
frontend/src/components/: AccountDeletion.tsx  AddMiniaturesToProject.tsx  Changelog.tsx  EditMiniatureForm.tsx  EmailVerification.tsx  (+23 more)
(+3 files in other folders)
