[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miniature-tracker-backend"
version = "0.1.0"
description = "Backend API for Warhammer miniature tracking"
authors = [{name = "Alex Cargnel", email = "alex@example.com"}]
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.115.4",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.9.2",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.17",
    "python-decouple>=3.8",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto" 